--- a/forumparent/forumwebapp/src/main/webapp/registrationform.html
+++ b/forumparent/forumwebapp/src/main/webapp/registrationform.html
@@ -9,7 +9,7 @@
             First name: <input type="text" name="firstname"> <br>
             Last name: <input type="text" name="lastname"><br>
             Email: <input type="email" name="email"><br>
-            <input type="submit" value="Save">
+            <input type="submit" value="Enroll">
         </form>
     </body>
 </html>
