--- a/forumparent/forumwebapp/src/main/webapp/registrationform_styled.html
+++ b/forumparent/forumwebapp/src/main/webapp/registrationform_styled.html
@@ -52,7 +52,7 @@
                         </div>
                         <div class="form-group row">
                             <div class="col-sm-8 offset-sm-4">
-                                <button type="submit" class="btn btn-primary">Save <i class="fas fa-users"></i></button>
+                                <button type="submit" class="btn btn-primary">Enroll <i class="fas fa-users"></i></button>
                             </div>
                         </div>
                     </form>
